refactoring et mise en place service update